# InvestmentAnalysisOfCompany

./: README.md  main.py  pyproject.toml  requirements.txt  requirements__old.txt
docs/: Investment Analysis Of A Company.docx
sample_outputs/: Financial Analysis - AstraZeneca.docx  Financial Analysis - TCS.docx  Financial Analysis for Apple Inc.docx
src/InvestmentAnalysis/: Research Reports.docx  financial_analysis_console.py  financial_analysis_streamlit.py
src/InvestmentAnalysis/agents/: financial_analysis_agent.py
src/InvestmentAnalysis/config/: financial_analysis_prompts2 copy.yaml  financial_analysis_prompts2.yaml
src/InvestmentAnalysis/tools/: financial_analysis_tools.py  ratios.py
