[project]
name = "investmentanalysisofcompany"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.4",
    "google-genai>=1.37.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
    "yfinance>=0.2.65",
]
